--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.13.2",
+    "cookie": "^1.1.1",
     "formik": "^2.4.9",
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-paginate": "^8.3.0",
+    "set-cookie-parser": "^2.7.2",
     "use-debounce": "^10.0.6",
     "yup": "^1.7.1",
     "zustand": "^5.0.9"
